--- a/package.json
+++ b/package.json
@@ -9,10 +9,40 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-picker/picker": "2.7.5",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
+    "@reduxjs/toolkit": "^2.2.6",
+    "@types/react-native-vector-icons": "^6.4.18",
+    "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
     "expo": "~51.0.17",
+    "expo-checkbox": "~3.0.0",
+    "expo-image-picker": "^15.0.6",
+    "expo-linear-gradient": "~13.0.2",
+    "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
+    "moti": "^0.29.0",
     "react": "18.2.0",
-    "react-native": "0.74.2"
+    "react-hook-form": "^7.52.0",
+    "react-icons": "^5.2.1",
+    "react-native": "0.74.2",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-feather": "^1.1.2",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-maps": "1.14.0",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-svg": "15.2.0",
+    "react-native-vector-icons": "^10.1.0",
+    "react-redux": "^9.1.2",
+    "redux-persist": "^6.0.0",
+    "tailwind": "^4.0.0",
+    "tailwind-react-native-classnames": "^1.5.1",
+    "tailwindcss": "^3.4.4",
+    "tailwindcss-react-native": "^1.7.10",
+    "twrnc": "^4.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
