--- a/package.json
+++ b/package.json
@@ -19,15 +19,17 @@
     "date-fns": "^3.6.0",
     "expo": "~51.0.17",
     "expo-checkbox": "~3.0.0",
-    "expo-image-picker": "^15.0.6",
+    "expo-device": "^6.0.2",
+    "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
     "expo-location": "~17.0.1",
+    "expo-notifications": "^0.28.9",
     "expo-status-bar": "~1.12.1",
     "moti": "^0.29.0",
     "react": "18.2.0",
     "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
-    "react-native": "0.74.2",
+    "react-native": "0.74.3",
     "react-native-chart-kit": "^6.12.0",
     "react-native-feather": "^1.1.2",
     "react-native-gesture-handler": "~2.16.1",
@@ -47,7 +49,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
-    "typescript": "^5.1.3"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
