--- a/package.json
+++ b/package.json
@@ -9,23 +9,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-picker/picker": "2.7.5",
+    "@react-navigation/bottom-tabs": "^6.6.0",
     "@react-navigation/native": "^6.1.17",
-    "@react-navigation/stack": "^6.3.29",
+    "@react-navigation/stack": "^6.4.0",
     "@reduxjs/toolkit": "^2.2.6",
+    "@types/haversine": "^1.1.8",
     "@types/react-native-vector-icons": "^6.4.18",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
-    "expo": "~51.0.17",
+    "expo": "~51.0.20",
+    "expo-av": "~14.0.6",
     "expo-checkbox": "~3.0.0",
-    "expo-device": "^6.0.2",
+    "expo-device": "~6.0.2",
     "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
     "expo-location": "~17.0.1",
-    "expo-notifications": "^0.28.9",
+    "expo-notifications": "~0.28.9",
+    "expo-permissions": "^14.4.0",
     "expo-status-bar": "~1.12.1",
+    "haversine": "^1.1.1",
     "moti": "^0.29.0",
+    "npm": "10.8.2",
     "react": "18.2.0",
     "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
@@ -33,7 +39,10 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-feather": "^1.1.2",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-gifted-chat": "^2.4.0",
+    "react-native-image-picker": "^7.1.2",
     "react-native-maps": "1.14.0",
+    "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-svg": "15.2.0",
@@ -47,8 +56,8 @@
     "twrnc": "^4.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
+    "@babel/core": "^7.24.0",
+    "@types/react": "~18.2.79",
     "typescript": "~5.3.3"
   },
   "private": true
