--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-picker/picker": "2.7.5",
     "@react-navigation/bottom-tabs": "^6.6.0",
+    "@react-navigation/drawer": "^6.7.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.4.0",
     "@reduxjs/toolkit": "^2.2.6",
@@ -44,7 +45,8 @@
     "react-native-maps": "1.14.0",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native-safe-area-context": "^4.10.8",
+    "react-native-screens": "^3.32.0",
     "react-native-svg": "15.2.0",
     "react-native-vector-icons": "^10.1.0",
     "react-redux": "^9.1.2",
