--- a/app.json
+++ b/app.json
@@ -19,7 +19,11 @@
         "foregroundImage": "./assets/azul.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.ludmil.KudyaParceiro"
+      "permissions": [
+        "LOCATION"
+      ],
+      "package": "com.ludmil.KudyaParceiro",
+      "versionCode": 1
     },
     "web": {
       "favicon": "./assets/azul.png"
@@ -27,7 +31,8 @@
     "extra": {
       "eas": {
         "projectId": "f848ca4d-cf74-4e6b-b42d-107d533158b8"
-      }
+      },
+      "googleMapsApiKey": "AIzaSyBJxPi5xtT7F3oxZzlSmIuaXsIswasjkKw"
     }
   }
 }
