--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
     "expo-location": "~17.0.1",
-    "expo-notifications": "~0.28.9",
-    "expo-permissions": "^14.4.0",
+    "expo-notifications": "~0.28.10",
     "expo-status-bar": "~1.12.1",
     "haversine": "^1.1.1",
     "moti": "^0.29.0",
@@ -45,8 +44,8 @@
     "react-native-maps": "1.14.0",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "^4.10.8",
-    "react-native-screens": "^3.32.0",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-vector-icons": "^10.1.0",
     "react-redux": "^9.1.2",
