--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "expo-av": "~14.0.6",
     "expo-checkbox": "~3.0.0",
     "expo-device": "~6.0.2",
-    "expo-haptics": "~13.0.1",
+    "expo-haptics": "^13.0.1",
     "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
     "expo-location": "~17.0.1",
