--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "Kudya Parceiro",
-    "slug": "Kudya Parceiro",
+    "slug": "kudya-parceiro",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/azul.png",
@@ -15,24 +15,25 @@
       "supportsTablet": true
     },
     "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/azul.png",
-        "backgroundColor": "#ffffff"
+      "config": {
+        "googleMaps": {
+          "apiKey": "AIzaSyDn1X_BlFj-57ydasP6uZK_X_WTERNJb78"
+        }
       },
       "permissions": [
         "LOCATION"
       ],
       "package": "com.ludmil.KudyaParceiro",
-      "versionCode": 1
+      "versionCode": 2
     },
     "web": {
       "favicon": "./assets/azul.png"
     },
     "extra": {
+      "googleMapsApiKey": "AIzaSyBJxPi5xtT7F3oxZzlSmIuaXsIswasjkKw",
       "eas": {
-        "projectId": "f848ca4d-cf74-4e6b-b42d-107d533158b8"
-      },
-      "googleMapsApiKey": "AIzaSyBJxPi5xtT7F3oxZzlSmIuaXsIswasjkKw"
+        "projectId": "af01b370-2900-4de4-8dd2-1634313bbc8b"
+      }
     }
   }
 }
