--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-picker/picker": "2.7.5",
     "@react-navigation/bottom-tabs": "^6.6.0",
     "@react-navigation/drawer": "^6.7.1",
@@ -21,7 +21,7 @@
     "@types/react-native-vector-icons": "^6.4.18",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
-    "expo": "~51.0.20",
+    "expo": "~51.0.22",
     "expo-av": "~14.0.6",
     "expo-checkbox": "~3.0.0",
     "expo-device": "~6.0.2",
@@ -29,8 +29,9 @@
     "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
     "expo-location": "~17.0.1",
-    "expo-notifications": "~0.28.10",
+    "expo-notifications": "~0.28.11",
     "expo-status-bar": "~1.12.1",
+    "global": "^4.4.0",
     "haversine": "^1.1.1",
     "moti": "^0.29.0",
     "npm": "10.8.2",
@@ -47,7 +48,7 @@
     "react-native-maps": "1.14.0",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-vector-icons": "^10.1.0",
@@ -57,7 +58,8 @@
     "tailwind-react-native-classnames": "^1.5.1",
     "tailwindcss": "^3.4.4",
     "tailwindcss-react-native": "^1.7.10",
-    "twrnc": "^4.3.0"
+    "twrnc": "^4.3.0",
+    "wrap-ansi": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
