--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/cli-server-api": "^18.0.0",
     "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-picker/picker": "2.7.5",
     "@react-navigation/bottom-tabs": "^6.6.0",
@@ -22,14 +23,14 @@
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
     "expo": "~51.0.22",
-    "expo-av": "~14.0.6",
+    "expo-av": "~14.0.7",
     "expo-checkbox": "~3.0.0",
     "expo-device": "~6.0.2",
     "expo-haptics": "^13.0.1",
-    "expo-image-picker": "~15.0.7",
+    "expo-image-picker": "~15.1.0",
     "expo-linear-gradient": "~13.0.2",
     "expo-location": "~17.0.1",
-    "expo-notifications": "~0.28.11",
+    "expo-notifications": "~0.28.19",
     "expo-status-bar": "~1.12.1",
     "global": "^4.4.0",
     "haversine": "^1.1.1",
@@ -38,7 +39,7 @@
     "react": "18.2.0",
     "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
-    "react-native": "0.74.3",
+    "react-native": "0.74.5",
     "react-native-chart-kit": "^6.12.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-feather": "^1.1.2",
