--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@types/react-native-vector-icons": "^6.4.18",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
-    "expo": "~52.0.46",
+    "expo": "^53.0.5",
     "expo-av": "~15.0.2",
     "expo-checkbox": "~4.0.1",
     "expo-device": "~7.0.3",
