--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "@expo/ngrok": "^4.1.0",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/cli-server-api": "^18.0.0",
-    "@react-native-community/datetimepicker": "8.2.0",
-    "@react-native-picker/picker": "2.9.0",
+    "@react-native-community/datetimepicker": "8.3.0",
+    "@react-native-picker/picker": "2.11.0",
     "@react-navigation/bottom-tabs": "^6.6.0",
     "@react-navigation/drawer": "^7.3.9",
     "@react-navigation/native": "^7.1.6",
@@ -24,36 +24,35 @@
     "@types/react-native-vector-icons": "^6.4.18",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
-    "expo": "^53.0.5",
-    "expo-av": "~15.0.2",
-    "expo-checkbox": "~4.0.1",
-    "expo-device": "~7.0.3",
-    "expo-haptics": "~14.0.1",
-    "expo-image-picker": "~16.0.6",
-    "expo-linear-gradient": "~14.0.2",
-    "expo-location": "~18.0.10",
-    "expo-notifications": "~0.29.14",
-    "expo-status-bar": "~2.0.1",
+    "expo": "53.0.9",
+    "expo-av": "~15.1.4",
+    "expo-checkbox": "~4.1.4",
+    "expo-device": "~7.1.4",
+    "expo-haptics": "~14.1.4",
+    "expo-image-picker": "~16.1.4",
+    "expo-linear-gradient": "~14.1.4",
+    "expo-location": "~18.1.4",
+    "expo-notifications": "~0.31.1",
+    "expo-status-bar": "~2.2.3",
     "global": "^4.4.0",
     "haversine": "^1.1.1",
     "moti": "^0.29.0",
-    "npm": "10.8.2",
-    "react": "^18.3.1",
+    "react": "19.0.0",
     "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
-    "react-native": "0.76.9",
+    "react-native": "0.79.2",
     "react-native-chart-kit": "^6.12.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-feather": "^1.1.2",
-    "react-native-gesture-handler": "~2.20.2",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-gifted-chat": "^2.4.0",
     "react-native-image-picker": "^7.1.2",
-    "react-native-maps": "1.18.0",
+    "react-native-maps": "1.20.1",
     "react-native-paper": "^5.12.3",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-svg": "15.8.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
+    "react-native-svg": "15.11.2",
     "react-native-vector-icons": "^10.1.0",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
@@ -66,9 +65,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
-    "@types/react": "~18.3.12",
+    "@types/react": "^19.1.4",
+    "@types/react-native": "^0.73.0",
     "tsx": "^4.16.2",
-    "typescript": "~5.3.3"
+    "typescript": "~5.8.3"
   },
   "private": true
 }
