--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,9 @@
 {
-  "extends": "expo/tsconfig.base",
+  "extends": "expo/tsconfig.base.json",
   "compilerOptions": {
+    "jsx": "react",
     "strict": true,
-    "target": "es2017",
-    "lib": ["ES2017", "dom"],
-    "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "baseUrl": ".",
-    "paths": {
-      "*": ["node_modules/*"]
-    },
-    "types": ["react-native", "react-native-vector-icons", "node"]
-  },
-  "exclude": ["node_modules"]
+    "allowSyntheticDefaultImports": true
+  }
 }
