--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "@expo/ngrok": "^4.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/cli-server-api": "^18.0.0",
-    "@react-native-community/datetimepicker": "8.3.0",
-    "@react-native-picker/picker": "2.11.0",
+    "@react-native-community/datetimepicker": "8.4.1",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^6.6.0",
     "@react-navigation/drawer": "^7.3.9",
     "@react-navigation/native": "^7.1.6",
@@ -24,15 +24,15 @@
     "@types/react-native-vector-icons": "^6.4.18",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
-    "expo": "53.0.9",
-    "expo-av": "~15.1.4",
+    "expo": "~53.0.23",
+    "expo-av": "~15.1.7",
     "expo-checkbox": "~4.1.4",
     "expo-device": "~7.1.4",
     "expo-haptics": "~14.1.4",
     "expo-image-picker": "~16.1.4",
-    "expo-linear-gradient": "~14.1.4",
-    "expo-location": "~18.1.4",
-    "expo-notifications": "~0.31.1",
+    "expo-linear-gradient": "~14.1.5",
+    "expo-location": "~18.1.6",
+    "expo-notifications": "~0.31.4",
     "expo-status-bar": "~2.2.3",
     "global": "^4.4.0",
     "haversine": "^1.1.1",
@@ -40,7 +40,7 @@
     "react": "19.0.0",
     "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
-    "react-native": "0.79.2",
+    "react-native": "0.79.5",
     "react-native-chart-kit": "^6.12.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-feather": "^1.1.2",
@@ -51,7 +51,7 @@
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.10.0",
+    "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-vector-icons": "^10.1.0",
     "react-redux": "^9.1.2",
@@ -65,8 +65,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
-    "@types/react": "^19.1.4",
-    "@types/react-native": "^0.73.0",
+    "@types/react": "~19.0.10",
     "tsx": "^4.16.2",
     "typescript": "~5.8.3"
   },
