--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "expo-status-bar": "~2.2.3",
     "global": "^4.4.0",
     "haversine": "^1.1.1",
+    "mixpanel-react-native": "^3.1.2",
     "moti": "^0.29.0",
     "react": "19.0.0",
     "react-hook-form": "^7.52.0",
